force-app/main/default/objects/Donnees_Vente__c/fields/montantAjustable__c.field-meta.xml
<CustomField>
    <fullName>montantAjustable__c</fullName>
    <formula>VALUE(SUBSTITUTE(Ajustement_mensualite__c,&apos;%&apos;,&apos;&apos;)) *  mensualite_totale_TTC__c  / 100 + mensualite_totale_TTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant ajustable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>