force-app/main/default/objects/Donnees_Vente__c/fields/Motif_resiliation__c.field-meta.xml
<CustomField>
    <fullName>Motif_resiliation__c</fullName>
    <label>Motif résiliation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>