force-app/main/default/objects/Donnees_Vente__c/fields/Naissance_assure__c.field-meta.xml
<CustomField>
    <fullName>Naissance_assure__c</fullName>
    <description>Date de naissance de l&apos;assuré (assurance facture)</description>
    <label>Date de naissance de l&apos;assuré</label>
    <type>Date</type>
</CustomField>