force-app/main/default/objects/Donnees_Vente__c/fields/NatureContrat__c.field-meta.xml
<CustomField>
    <fullName>NatureContrat__c</fullName>
    <description>Ce champ formule détermine la nature du contrat &quot;Gaz ou Elec&quot;</description>
    <formula>IF(AND(NOT(ISBLANK(Code_offre_gaz__c )),NOT(ISBLANK(Code_offre_elec__c))),&quot;gaz naturel et électricité&quot;, 
        IF(NOT(ISBLANK(Code_offre_gaz__c )),&apos;gaz naturel&apos;,IF(NOT(ISBLANK( Code_offre_elec__c)),&apos;électricité&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature de contrat</label>
    <type>Text</type>
</CustomField>