force-app/main/default/objects/Donnees_Vente__c/fields/NB_occupants__c.field-meta.xml
<CustomField>
    <fullName>NB_occupants__c</fullName>
    <description>NB_OCCUPANTS</description>
    <label>Nombre d&apos;occupants</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>