force-app/main/default/objects/Donnees_Vente__c/fields/Nom_assure__c.field-meta.xml
<CustomField>
    <fullName>Nom_assure__c</fullName>
    <description>Nom complet de l&apos;assuré (Assurance facture)</description>
    <label>Nom complet de l&apos;assuré</label>
    <length>255</length>
    <type>Text</type>
</CustomField>