force-app/main/default/objects/Donnees_Vente__c/fields/Nom_client__c.field-meta.xml
<CustomField>
    <fullName>Nom_client__c</fullName>
    <label>Nom client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>