force-app/main/default/objects/Donnees_Vente__c/fields/Nom_co_titulaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_co_titulaire__c</fullName>
    <label>Nom co titulaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>