force-app/main/default/objects/Donnees_Vente__c/fields/Nombre_de_radiateurs__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_radiateurs__c</fullName>
    <label>Nombre de radiateurs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>