force-app/main/default/objects/Donnees_Vente__c/fields/Num_partner__c.field-meta.xml
<CustomField>
    <fullName>Num_partner__c</fullName>
    <label>Num partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>