force-app/main/default/objects/Donnees_Vente__c/fields/Numero_appartement__c.field-meta.xml
<CustomField>
    <fullName>Numero_appartement__c</fullName>
    <label>Numéro appartement</label>
    <length>80</length>
    <type>Text</type>
</CustomField>