force-app/main/default/objects/Donnees_Vente__c/fields/Numero_contrat_a_resilier__c.field-meta.xml
<CustomField>
    <fullName>Numero_contrat_a_resilier__c</fullName>
    <label>Numéro du contrat à résilier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>