force-app/main/default/objects/Donnees_Vente__c/fields/Numero_de_voie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_voie__c</fullName>
    <label>Numéro de voie</label>
    <length>80</length>
    <type>Text</type>
</CustomField>