force-app/main/default/objects/Donnees_Vente__c/fields/Numero_du_parcours__c.field-meta.xml
<CustomField>
    <fullName>Numero_du_parcours__c</fullName>
    <formula>Parcours__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro du parcours</label>
    <type>Text</type>
</CustomField>