force-app/main/default/objects/Donnees_Vente__c/fields/offre_energie__c.field-meta.xml
<CustomField>
    <fullName>offre_energie__c</fullName>
    <label>offre energie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>