force-app/main/default/objects/Donnees_Vente__c/fields/Offre_Reference__c.field-meta.xml
<CustomField>
    <fullName>Offre_Reference__c</fullName>
    <description>Offre Référence, cette compétence sera requise si au moins l’un des champs “Code offre gaz; Code offre elec; Code offre pack”est non null.</description>
    <formula>OR(
  Code_offre_elec__c &lt;&gt; NULL ,  Code_offre_gaz__c &lt;&gt; NULL  ,  Code_pack__c &lt;&gt; NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offre Reference</label>
    <type>Checkbox</type>
</CustomField>