force-app/main/default/objects/Donnees_Vente__c/fields/options_payantes__c.field-meta.xml
<CustomField>
    <fullName>options_payantes__c</fullName>
    <label>Options payantes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>