force-app/main/default/objects/Donnees_Vente__c/fields/origine_PCE__c.field-meta.xml
<CustomField>
    <fullName>origine_PCE__c</fullName>
    <label>Origine PCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>