force-app/main/default/objects/Donnees_Vente__c/fields/Origine_pdl__c.field-meta.xml
<CustomField>
    <fullName>Origine_pdl__c</fullName>
    <label>Origine pdl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>