force-app/main/default/objects/Donnees_Vente__c/fields/Parcours__c.field-meta.xml
<CustomField>
    <fullName>Parcours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parcours</label>
    <referenceTo>VI_Parcours__c</referenceTo>
    <relationshipLabel>Données Ventes</relationshipLabel>
    <relationshipName>Donnees_Ventes</relationshipName>
    <type>Lookup</type>
</CustomField>