force-app/main/default/objects/Donnees_Vente__c/fields/Parcours_Client__c.field-meta.xml
<CustomField>
    <fullName>Parcours_Client__c</fullName>
    <label>Parcours Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMDM</fullName>
            </value>
            <value>
                <fullName>Emménagement</fullName>
            </value>
            <value>
                <fullName>Changement de fournisseur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>