force-app/main/default/objects/Donnees_Vente__c/fields/Plage_de_consommation__c.field-meta.xml
<CustomField>
    <fullName>Plage_de_consommation__c</fullName>
    <label>Plage de consommation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>