force-app/main/default/objects/Donnees_Vente__c/fields/Point_comptage_estimation__c.field-meta.xml
<CustomField>
    <fullName>Point_comptage_estimation__c</fullName>
    <description>POINT_COMPTAGE_ESTIMATION</description>
    <label>Point de comptage estimation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>