force-app/main/default/objects/Donnees_Vente__c/fields/Point_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Point_de_livraison__c</fullName>
    <label>Point de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>