force-app/main/default/objects/Donnees_Vente__c/fields/Porte__c.field-meta.xml
<CustomField>
    <fullName>Porte__c</fullName>
    <label>Porte</label>
    <length>250</length>
    <type>Text</type>
</CustomField>