force-app/main/default/objects/Donnees_Vente__c/fields/pourcentage_gaz_vert_plus__c.field-meta.xml
<CustomField>
    <fullName>pourcentage_gaz_vert_plus__c</fullName>
    <label>pourcentage gaz vert +</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>