force-app/main/default/objects/Donnees_Vente__c/fields/Premier_raccordement__c.field-meta.xml
<CustomField>
    <fullName>Premier_raccordement__c</fullName>
    <label>Premier raccordement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oui</fullName>
            </value>
            <value>
                <fullName>non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>