force-app/main/default/objects/Donnees_Vente__c/fields/Prenom_client__c.field-meta.xml
<CustomField>
    <fullName>Prenom_client__c</fullName>
    <label>Prenom client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>