force-app/main/default/objects/Donnees_Vente__c/fields/Prenom_co_titulaire__c.field-meta.xml
<CustomField>
    <fullName>Prenom_co_titulaire__c</fullName>
    <label>Prénom co titulaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>