force-app/main/default/objects/Donnees_Vente__c/fields/PRIX_KWH_ELEC_ACH_HCB__c.field-meta.xml
<CustomField>
    <fullName>PRIX_KWH_ELEC_ACH_HCB__c</fullName>
    <label>Prix kwh ACHHCB Elec</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>