force-app/main/default/objects/Donnees_Vente__c/fields/PRIX_KWH_ELEC_ACH_HT__c.field-meta.xml
<CustomField>
    <fullName>PRIX_KWH_ELEC_ACH_HT__c</fullName>
    <label>Prix kwh ACH Base Elec HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>