force-app/main/default/objects/Donnees_Vente__c/fields/PRIX_KWH_ELEC_FOUR_WE__c.field-meta.xml
<CustomField>
    <fullName>PRIX_KWH_ELEC_FOUR_WE__c</fullName>
    <label>Prix kwh FOUR WE Elec</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>