force-app/main/default/objects/Donnees_Vente__c/fields/PRIX_KWH_GAZ_OBLI__c.field-meta.xml
<CustomField>
    <fullName>PRIX_KWH_GAZ_OBLI__c</fullName>
    <label>obligations Gaz</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>