force-app/main/default/objects/Donnees_Vente__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <label>Promo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>