force-app/main/default/objects/Donnees_Vente__c/fields/Puissance__c.field-meta.xml
<CustomField>
    <fullName>Puissance__c</fullName>
    <label>Puissance</label>
    <length>10</length>
    <type>Text</type>
</CustomField>