force-app/main/default/objects/Donnees_Vente__c/fields/reference_client__c.field-meta.xml
<CustomField>
    <fullName>reference_client__c</fullName>
    <label>référence client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>