force-app/main/default/objects/Donnees_Vente__c/fields/Serenite_chaudiere__c.field-meta.xml
<CustomField>
    <fullName>Serenite_chaudiere__c</fullName>
    <label>Serenité chaudière</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>