force-app/main/default/objects/Donnees_Vente__c/fields/Service_Payant__c.field-meta.xml
<CustomField>
    <fullName>Service_Payant__c</fullName>
    <description>Service Payant,  cette compétence sera requise si au moins l’un des champs “Assurance facture; Diagnostique securité insatal gaz; Diagnostique instal elec; DEGEX+; DEPEX+; DEGEX; DEPEX” est non null.</description>
    <formula>OR(
					Assurance_facture__c    ,Diagnostic_securite_instal_elec__c  ,Diagnostic_securite_instal_gaz__c  ,
 		 Depex__c  , Degex__c  ,  Degexplus__c  ,  Depexplus__c 
							)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Payant</label>
    <type>Checkbox</type>
</CustomField>