force-app/main/default/objects/Donnees_Vente__c/fields/SM_CreationErrorMessage_Lead_MyPower__c.field-meta.xml
<CustomField>
    <fullName>SM_CreationErrorMessage_Lead_MyPower__c</fullName>
    <description>Message d&apos;erreur rencontré lors de la tentative de création d&apos;un lead dans l&apos;organisation Salesforce MyPower dans le cadre du parcours Détection de projet (FT1-4284)</description>
    <label>Erreur à la création du Lead MyPower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>