force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Branchement_existent__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Branchement_existent__c</fullName>
    <description>champ spécifique au parcours détection de projet</description>
    <label>Branchement existent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>