force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Commentaires__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Commentaires__c</fullName>
    <description>champ spécifique au parcours détection de projet</description>
    <label>Commentaires</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>