force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Date_de_rappel__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Date_de_rappel__c</fullName>
    <description>champ spécifique au parcours détection de projet</description>
    <label>Date de rappel</label>
    <type>Date</type>
</CustomField>