force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Echeance_de_projet__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Echeance_de_projet__c</fullName>
    <description>Champ spécifique au parcours détection de projet</description>
    <label>Échéance de projet</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SM_DP_Projet__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projet &lt;3</fullName>
            </value>
            <value>
                <fullName>Projet de 3 mois a 6 mois</fullName>
            </value>
            <value>
                <fullName>Projet entre 6 et 12 mois</fullName>
            </value>
            <value>
                <fullName>Projet &lt; 3 mois</fullName>
                <isActive>false</isActive>
                <label>Projet &lt; 3 mois</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>