force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_erreur_Contrat__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_erreur_Contrat__c</fullName>
    <description>Champ spécifique au parcours détection de projet Tranquility</description>
    <label>Message d&apos;erreur Contrat Tranquility</label>
    <length>250</length>
    <type>Text</type>
</CustomField>