force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Heure_de_rappel__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Heure_de_rappel__c</fullName>
    <description>champ spécifique au parcours détection de projet</description>
    <label>Heure de rappel préférée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9h-14h</fullName>
            </value>
            <value>
                <fullName>14h-18h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>