force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Projet__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Projet__c</fullName>
    <description>Champ spécifique au parcours détection de projet</description>
    <label>Projet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projet Chauffage</fullName>
            </value>
            <value>
                <fullName>Projet Climatisation</fullName>
            </value>
            <value>
                <fullName>Projet Isolation</fullName>
            </value>
            <value>
                <fullName>Projet Panneaux solaires</fullName>
            </value>
            <value>
                <fullName>Projet Adoucisseur d’eau</fullName>
            </value>
            <value>
                <fullName>Projet Ballon d’eau chaude sanitaire</fullName>
            </value>
            <value>
                <fullName>Projet Entretien</fullName>
            </value>
            <value>
                <fullName>Emménagement</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Déménagement</fullName>
            </value>
            <value>
                <fullName>Mon Pilotage Elec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>