force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Statut_Contrat__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Statut_Contrat__c</fullName>
    <description>Champ spécifique au parcours détection de projet tranquility</description>
    <label>Statut Contrat Tranquility</label>
    <length>250</length>
    <type>Text</type>
</CustomField>