force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Statut_d_occupation__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Statut_d_occupation__c</fullName>
    <description>Champ spécifique au parcours détection de projet</description>
    <label>Statut d&apos;occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locataire</fullName>
            </value>
            <value>
                <fullName>Propriétaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>