force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Statut_eligibilite__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Statut_eligibilite__c</fullName>
    <label>Statut éligibilité Tranquility/MyPower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non éligible</fullName>
            </value>
            <value>
                <fullName>Éligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>