force-app/main/default/objects/Donnees_Vente__c/fields/SM_DP_Type_de_Projet__c.field-meta.xml
<CustomField>
    <fullName>SM_DP_Type_de_Projet__c</fullName>
    <description>Champ spécifique au parcours détection de projet</description>
    <label>Type de Projet</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SM_DP_Projet__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projet Isolation des combles</fullName>
            </value>
            <value>
                <fullName>Projet Isolation du plancher</fullName>
            </value>
            <value>
                <fullName>Projet Isolation des murs</fullName>
            </value>
            <value>
                <fullName>Projet Remplacement fenêtres</fullName>
            </value>
            <value>
                <fullName>Projet Entretien Chaudière</fullName>
            </value>
            <value>
                <fullName>Projet Entretien Pompe à chaleur</fullName>
            </value>
            <value>
                <fullName>Projet Remplacement Chaudière</fullName>
            </value>
            <value>
                <fullName>Projet Pompe à chaleur</fullName>
            </value>
            <value>
                <fullName>Projet Radiateurs électriques</fullName>
                <isActive>false</isActive>
                <label>Projet Radiateurs électriques</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>