force-app/main/default/objects/Donnees_Vente__c/fields/SM_LeadId_MyPower__c.field-meta.xml
<CustomField>
    <fullName>SM_LeadId_MyPower__c</fullName>
    <description>Identifiant du lead créé dans l&apos;organisation Salesforce MyPower dans le cadre du parcours Détection de projet (FT1-4284)</description>
    <label>Identifiant du Lead MyPower</label>
    <length>18</length>
    <type>Text</type>
</CustomField>