force-app/main/default/objects/Donnees_Vente__c/fields/SM_Type_Energie__c.field-meta.xml
<CustomField>
    <fullName>SM_Type_Energie__c</fullName>
    <label>Type d&apos;énergie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaz</fullName>
            </value>
            <value>
                <fullName>Elec</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>