force-app/main/default/objects/Donnees_Vente__c/fields/Statut_compte_client__c.field-meta.xml
<CustomField>
    <fullName>Statut_compte_client__c</fullName>
    <label>Statut compte client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>