force-app/main/default/objects/Donnees_Vente__c/fields/Statut_Iban__c.field-meta.xml
<CustomField>
    <fullName>Statut_Iban__c</fullName>
    <description>Champ spécifique à Harmonica CHO alimenté par le tunnel en ligne</description>
    <label>Statut IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>