force-app/main/default/objects/Donnees_Vente__c/fields/Statut_mandat__c.field-meta.xml
<CustomField>
    <fullName>Statut_mandat__c</fullName>
    <description>STATUT_MANDAT
à signer
déjà signé
signé en ligne</description>
    <label>Statut mandat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>à signer</fullName>
            </value>
            <value>
                <fullName>déjà signé</fullName>
            </value>
            <value>
                <fullName>signé en ligne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>