force-app/main/default/objects/Donnees_Vente__c/fields/statut_prelevement__c.field-meta.xml
<CustomField>
    <fullName>statut_prelevement__c</fullName>
    <label>statut prélèvement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>