force-app/main/default/objects/Donnees_Vente__c/fields/Statut_reference_client__c.field-meta.xml
<CustomField>
    <fullName>Statut_reference_client__c</fullName>
    <label>Statut référence client</label>
    <length>80</length>
    <type>Text</type>
</CustomField>