force-app/main/default/objects/Donnees_Vente__c/fields/surface_chauffee_futur_logement__c.field-meta.xml
<CustomField>
    <fullName>surface_chauffee_futur_logement__c</fullName>
    <label>Surface chauffée futur logement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>