force-app/main/default/objects/Donnees_Vente__c/fields/Surface_logement__c.field-meta.xml
<CustomField>
    <fullName>Surface_logement__c</fullName>
    <label>Surface de votre logement (en m²)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>