force-app/main/default/objects/Donnees_Vente__c/fields/Telephone_client__c.field-meta.xml
<CustomField>
    <fullName>Telephone_client__c</fullName>
    <label>Téléphone client</label>
    <type>Phone</type>
</CustomField>