force-app/main/default/objects/Donnees_Vente__c/fields/Theme_demande__c.field-meta.xml
<CustomField>
    <fullName>Theme_demande__c</fullName>
    <label>Theme demande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>