force-app/main/default/objects/Donnees_Vente__c/fields/TOTAL_MONTANT_ABO_GAZ__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MONTANT_ABO_GAZ__c</fullName>
    <label>Total prix abonnement Gaz</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>