force-app/main/default/objects/Donnees_Vente__c/fields/TOTAL_MONTANT_CONSO_ELEC__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MONTANT_CONSO_ELEC__c</fullName>
    <label>Total prix consommations Elec</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>